# ePaperPhotoFrame

./: .gitmodules  CMakeLists.txt
src/epaperdisplay_sample/: CMakeLists.txt  example.c  example.h  main.c  main_display.c
src/epaperdisplay_sample/Config/: DEV_Config.c  DEV_Config.h
src/epaperdisplay_sample/GUI/: GUI_BMPfile.c  GUI_Paint.c
src/epaperdisplay_sample/e-Paper/: EPD_IT8951.c  EPD_IT8951.h
src/epaperdisplay_sample/fatfs/: ffconf.h  mmc_pico_spi.c
